fixed sidebar overlaping

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -249,9 +249,10 @@ html {
   }
 
   .navbar-nav {
-    position: static;
+    width: 100%;
     background-color: black;
     padding: 2em 0em 3em 1em;
+    z-index: 5!important;
   }
   .enrol-btn {
     margin-left: 0.5rem;
@@ -274,9 +275,10 @@ html {
   }
 
   .navbar-nav {
-    position: static;
+    width: 100%;
     background-color: black;
     padding: 2em 0em 3em 1em;
+    z-index: 5!important;
   }
   .enrol-btn {
     margin-left: 0.5rem;
